--- a/website-modules/design/layout.css
+++ b/website-modules/design/layout.css
@@ -161,3 +161,7 @@
 		display: revert;
 	}
 }
+
+.rtfTable{border-collapse:collapse;border:1px solid silver;width:100%;}
+.rtfTable>tbody>tr>th{background-color:lightgray;padding:3px;text-align:center;}
+.rtfTable>tbody>tr>td{padding:10px;}
