--- a/website-modules/design/layout.css
+++ b/website-modules/design/layout.css
@@ -165,5 +165,5 @@
 .rtfTable{border-collapse:collapse;border:1px solid silver;width:100%;}
 .rtfTable>tbody>tr>th,.rtfTable>tbody>tr>th>div{background-color:lightgray;padding:3px !important;text-align:center;}
 .rtfTable>tbody>tr>td{padding:10px;}
-.col2divs{width:50%;display:inline-block;}
-@media screen and (max-width: 600px) {.col2divs{width:100% !important;vertical-align: text-top;} }
+.col2divs{width:50%;display:inline-block;vertical-align: text-top;}
+@media screen and (max-width: 600px) {.col2divs{width:100% !important;} }
