--- a/view/index.html
+++ b/view/index.html
@@ -4,8 +4,7 @@
 <head>
   <title>Receiver</title>
 </head>
-<body>
-  <h2>Received Message:</h2>
+<body>  
   <p id="output"></p>
 
   <script>
@@ -14,5 +13,5 @@
     const message = params.get("msg");
 
     // Display it
-    document.getElementById("output").textContent = message || "No message received.";
+    document.getElementById("output").innerHTML = message || "No message received.";
   </script>
