--- a/view/index.html
+++ b/view/index.html
@@ -13,5 +13,5 @@
     const message = params.get("msg");
 
     // Display it
-    document.getElementById("output").innerHTML = message || "No message received.";
+    document.getElementById("output").innerHTML = message || "Data not received.";
   </script>
