--- a/website-modules/design/keyframes/plain.css
+++ b/website-modules/design/keyframes/plain.css
@@ -63,6 +63,10 @@
 	0%	{transform: rotateZ(0deg);}
 	100%{transform: rotateZ(360deg);}
 }
+@keyframes scroll {
+  0% {transform: translateX(100%);}
+  100% {transform: translateX(-100%);}
+}
 @keyframes slide {
   0%   { transform: translateX(0); }
   25%  { transform: translateX(0); }
