--- a/website-modules/elements/nav/nav.css
+++ b/website-modules/elements/nav/nav.css
@@ -64,9 +64,13 @@ nav.nav_one_active_light>ul>li
 }
 nav.nav_one_active_light>ul li.nav_active
 {
-	background-color: var(--main-color) !important;
+	background-color: lightcyan;
+    color: var(--main-color-2);
+    border: 0.1vw solid silver;
+	
+	/*background-color: var(--main-color) !important;
 	color: var(--main-color-2);
-	border: 0.1vw solid var(--main-color-2);
+	border: 0.1vw solid var(--main-color-2);*/
 }
 nav.nav_svg_active>ul li.nav_active
 {
